[metadata]
name = qiskit_trebugger
version = 0.0.1
author = Egretta Thula, Harshit Gupta
author_email = harshit.11235@gmail.com
description = A timeline debugger for the qiskit transpiler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kdk/qiskit-timeline-debugger
project_urls =
    
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src