[metadata]
name = qiskit_trebugger
version = 0.0.4
author = Egretta Thula, Harshit Gupta
author_email = harshit.11235@gmail.com
description = A timeline debugger for the qiskit transpiler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheGupta2012/qiskit-timeline-debugger
project_urls =
    
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    ipython>=7.30.1
    ipywidgets>=7.6.3
    numpy>=1.20.2
    qiskit>=0.33.1
    qiskit_aer>=0.9.1
    matplotlib>=3.3
    pylatexenc>=1.4

[options.packages.find]
where = src